<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="@dimen/center_box_width"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/skytel_logo_color"
            android:layout_width="@dimen/leftmenu_width"
            android:layout_height="@dimen/logo_height"
            android:layout_marginBottom="@dimen/second_padding"
            android:background="@drawable/skytel_logo_white" />

        <LinearLayout
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <TextView
                style="@style/MainViewTextViewWhite"
                android:text="@string/forget" />


            <EditText
                android:id="@+id/phone_number"
                style="@style/LoginEditTextStyle"
                android:hint="@string/phone_number"
                android:inputType="number"/>

            <Button
                android:id="@+id/btn_forget"
                style="@style/ButtonStyle"
                android:layout_marginTop="@dimen/second_padding"
                android:text="@string/btn_send" />

            <TextView
                style="@style/MainViewTextViewWhite"
                android:text="@string/forget_hint" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/recover_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                style="@style/MainViewTextViewWhite"
                android:text="@string/recover" />

            <EditText
                android:id="@+id/confirm_code"
                style="@style/LoginEditTextStyle"
                android:hint="@string/confirm_code" />

            <EditText
                android:id="@+id/new_pass"
                style="@style/LoginEditTextStyle"
                android:inputType="textPassword"
                android:hint="@string/new_pass" />

            <Button
                android:id="@+id/btn_recover"
                style="@style/ButtonStyle"
                android:layout_marginTop="@dimen/second_padding"
                android:text="@string/btn_send" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>